# vlayer

./: .dockerignore  .env  .env.local.example  .git-branches.toml  .gitattributes  .gitignore  .gitmodules  .shellcheckrc  .solhint.json  AUDIT_TREE.md  Cargo.toml  Dockerfile  ESTIMATES.md  LICENSE  README.md  audit-scope.md  audit-scope.txt  bun.lockb  bunfig.toml  clippy.toml  eslint.config.ts  flake.nix  foundry.toml  package.json  params.json  prover.json  run.sh  run_prover.sh  run_qn.sh  rust-toolchain.toml  rustfmt.toml
rust/: .env.example  Cargo.toml  chain_guest_elf_id  clippy.toml  groth16_proof.txt  rustfmt.toml
rust/benchmarks/: Cargo.toml
rust/benchmarks/benchmarks/: Cargo.toml  build.rs
rust/benchmarks/risc0_guest/: Cargo.toml
rust/benchmarks/src/: bencher.rs  lib.rs
rust/benchmarks/zkvm-bencher-types/: Cargo.toml
rust/block_header/: Cargo.toml
rust/block_header/src/: casting_utils.rs  eth.rs  forge.rs  lib.rs
rust/block_header/testdata/: mainnet_rpc_cache.json
rust/block_proof/: Cargo.toml
rust/block_proof/engine/: Cargo.toml
rust/block_proof/server/: Cargo.toml
rust/block_proof/src/: lib.rs
rust/block_proof/tests/: integration_tests.rs
rust/call/engine/: Cargo.toml
rust/call/guest/: Cargo.toml
rust/call/guest_wrapper/: Cargo.toml  build.rs
rust/call/host/: Cargo.toml
rust/call/server/: Cargo.toml  README.md
rust/chain/: Cargo.toml  chain_spec.toml  chain_specs.toml
rust/chain/src/: config.rs  error.rs  fork.rs  lib.rs  optimism.rs  spec.rs
rust/cli/: Cargo.toml  build.rs  config.toml  deny.toml
rust/cli/src/: cli_args.rs  cli_wrappers.rs  commands.rs  config.rs  errors.rs  main.rs  soldeer.rs  test_utils.rs
rust/cli/tests/: integration.rs
rust/common/: Cargo.toml
rust/common/src/: cache.rs  cli.rs  digest.rs  guest.rs  hashable.rs  lib.rs  rpc.rs  timeout_retry.rs  trace.rs  verifier.rs
rust/common_guest/: Cargo.toml
rust/common_guest/src/: lib.rs
rust/email_proof/: Cargo.toml
rust/email_proof/src/: canonization.rs  dkim.rs  dns.rs  email.rs  email_address.rs  errors.rs  from_header.rs  lib.rs  test_utils.rs
rust/email_proof/testdata/: email.txt  email_with_attachment.eml  multipart_email.eml  signed_email.txt  signed_email_different_domains.txt  signed_email_dkim_subdomain.txt  signed_email_from_subdomain.txt  signed_email_modified_body.txt  signed_email_with_dkim_l_tag.eml
rust/engine/: Cargo.toml
rust/engine/src/: block_header.rs  chain.rs  config.rs  engine.rs  ethereum.rs  evm.rs  inspector.rs  io.rs  lib.rs  utils.rs
rust/engine/testdata/: invalid_header.json
rust/gas_price_checker/: Cargo.toml  README
rust/gas_price_checker/src/: main.rs
rust/generate_fixtures/: Cargo.toml  README.md
rust/generate_fixtures/src/: main.rs
rust/guest/: Cargo.toml
rust/guest/src/: lib.rs
rust/guest_wrapper/: Cargo.toml  build.rs  chain_guest_elf_id
rust/guest_wrapper/build_utils/: Cargo.toml
rust/guest_wrapper/guest/: Cargo.toml
rust/guest_wrapper/risc0_call_guest/: Cargo.toml  build.rs
rust/guest_wrapper/risc0_chain_guest/: Cargo.toml  build.rs
rust/guest_wrapper/risc0_guest/: Cargo.toml
rust/guest_wrapper/sp1_call_guest/: Cargo.toml
rust/guest_wrapper/src/: lib.rs
rust/guest_wrapper_utils/: Cargo.toml
rust/guest_wrapper_utils/src/: lib.rs
rust/host/: .env.example  Cargo.toml
rust/host/src/: evm_env.rs  evm_env_factory.rs  host.rs  host_int_tests.rs  host_tests.rs  into_input.rs  lib.rs  main.rs  multiprovider.rs  proof.rs  provider.rs  utils.rs
rust/host/testdata/: mainnet_rpc_cache.json  mainnet_uniswap_exact_output_single_rpc_cache.json  mainnet_uniswap_factory_owner_rpc_cache.json  mainnet_usdt_erc20_balance_of_rpc_cache.json  rpc_cache.json  sepolia_rpc_cache.json  sepolia_view_blockhash_rpc_cache.json  sepolia_view_call_eoa_rpc_cache.json  sepolia_view_chainid_rpc_cache.json  sepolia_view_eoa_account_rpc_cache.json  sepolia_view_multi_contract_calls_rpc_cache.json  sepolia_view_nonexistent_account_rpc_cache.json  sepolia_view_precompile_rpc_cache.json
rust/host/tests/: eth_call.rs  integration_tests.rs
rust/host_utils/: Cargo.toml
rust/host_utils/src/: config.rs  error.rs  lib.rs  prover.rs  proving.rs  risc0_prover.rs  sp1_prover.rs
rust/jwt/: Cargo.toml
rust/jwt/src/: lib.rs
rust/key_value/: Cargo.toml
rust/key_value/benches/: mdbx_insert.rs
rust/key_value/src/: in_memory.rs  lib.rs  mdbx.rs
rust/kv/: Cargo.toml
rust/kv/src/: lib.rs
rust/mpt/: Cargo.toml  README.md  clippy.toml
rust/mpt/docs/: insert.md  node.md  node_internal_structure.md
rust/mpt/src/: hash.rs  key_nibbles.rs  lib.rs  node.rs  node_ref.rs  path.rs  tests.rs  trie.rs  utils.rs
rust/mpt/tests/: consistent_with_alloy_trie.rs  insert_and_get.rs  insert_is_commutative.rs  parse_eth_get_proof.rs  structure_independent_of_insert_order.rs  utils.rs
rust/prove_chain/engine/: Cargo.toml
rust/prove_chain/guest/: Cargo.toml
rust/prove_chain/guest_wrapper/: build.rs
rust/prove_chain/host/: Cargo.toml
rust/prove_chain/server/: Cargo.toml
rust/provider/: Cargo.toml
rust/provider/src/: cache.rs  default.rs  ethers.rs  factory.rs  file.rs  lib.rs  multi.rs  never.rs  null.rs  profiling.rs  proof.rs  provider_ext.rs
rust/provider/testdata/: cache.json
rust/range/: Cargo.toml
rust/range/src/: lib.rs  non_empty_range.rs  range.rs
rust/scripts/run_services/: Cargo.toml
rust/server/: Cargo.toml
rust/server/src/: app.rs  error.rs  handlers.rs  json.rs  json_rpc.rs  lib.rs  main.rs  server.rs  test_helpers.rs  trace.rs  utils.rs
rust/server/testdata/: tls_proof.json
rust/server/tests/: integration_tests.rs
rust/server_utils/: Cargo.toml
rust/services/: .env.example
rust/template/: Cargo.toml
rust/test_runner/: Cargo.toml
rust/traits/: Cargo.toml
rust/verifiable_dns/: Cargo.toml
rust/version/: Cargo.toml  build.rs
rust/version/src/: lib.rs
rust/vld/: Cargo.toml  build.rs
rust/web_proof/: Cargo.toml  build.rs  flow.txt
rust/web_proof_profiling/: Cargo.toml
rust/web_proof_vercel/: Cargo.toml  openapi.yaml
rust/web_prover/: Cargo.toml  README.md
(+2208 files in other folders)
