[workspace]
resolver = "2"
members = [
    "block_header",
    "chain",
    "cli",
    "common",
    "email_proof",
    "host_utils",
    "key_value",
    "mpt",
    "provider",
    "range",
    "server_utils",
    "services/call/engine",
    "services/call/guest",
    "services/call/guest_wrapper",
    "services/call/host",
    "services/call/precompiles",
    "services/call/seal",
    "services/call/server",
    "services/chain/block_trie",
    "services/chain/client",
    "services/chain/common",
    "services/chain/db",
    "services/chain/guest",
    "services/chain/guest_wrapper",
    "services/chain/host",
    "services/chain/mock_server",
    "services/chain/server",
    "services/chain/server_lib",
    "services/chain/test_utils",
    "services/chain/worker",
    "services/dns/server",
    "test_runner",
    "web_proof",
    "zkvm-benchmarks/benchmarks",
    "zkvm-benchmarks/runner",
]

[profile.release]
debug = 1
lto = true

[workspace.dependencies]
alloy-chains = "0.1.42"
alloy-dyn-abi = "=0.8.16"
alloy-json-abi = "=0.8.16"
alloy-primitives = { version = "=0.8.16", default-features = false, features = ["serde"] }
alloy-rlp = { version = "0.3.9", default-features = false }
alloy-rlp-derive = { version = "0.3.9", default-features = false }
alloy-sol-types = "=0.8.16"
alloy-trie = "=0.7.8"
anyhow = "1.0.91"
as-any = "0.3.1"
assert-json-diff = "2.0.2"
async-trait = "0.1.83"
auto_impl = "1.2.0"
axum = { version = "0.7.7", features = ["macros"] }
axum-jrpc = "0.7.1"
bincode = { version = "1.3.3", default-features = false }
bytemuck = "1.19.0"
bytes = "1.8.0"
chrono = "0.4.38"
chunked_transfer = "1.5.0"
clap = "4.5.20"
color-eyre = "0.6.3"
sha3 = "0.10.8"
colored = "2.1.0"
comfy-table = "7.1.1"
digest = "0.10.7"
criterion = "0.5.1"
ctor = "0.2.8"
dashmap = "6.1.0"
delegate = "0.13.1"
derive_more = { version = "1.0.0", features = ["debug", "into", "from", "into_iterator", "deref"] }
derive-new = "0.7.0"
derivative = "2.2.0"
dotenvy = "0.15.7"
dyn-clone = "1.0.17"
ethers = "2.0"
ethers-core = { version = "2.0", default-features = false }
ethers-providers = "2.0"
eyre = "0.6.12"
sha2 = "0.10.8"
flate2 = "1.0.34"
forge = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04", default-features = false }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04", default-features = false }
foundry-common = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04" }
foundry-compilers = { version = "0.12.8", default-features = false }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04", default-features = false }
foundry-debugger = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04" }
foundry-evm-core = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04" }
foundry-test-utils = { git = "https://github.com/foundry-rs/foundry", rev = "6cb41febfc989cbf7dc13c43ec6c3ce5fba1ea04" }
futures = { version = "0.3.31", default-features = false }
hex = "0.4.3"
http-body-util = "0.1.2"
httparse = "1.9.5"
hyper = "1.5.2"
indicatif = "0.17.8"
inferno = "0.12.0"
itertools = { version = "0.13.0" }
jsonrpsee = { version = "0.24.7", features = ["server-core", "macros"] }
lazy_static = "1.5.0"
libmdbx = "0.5.2"
mime = "0.3.17"
mockito = "1.5.0"
nybbles = "0.2.1"
once_cell = "1.20"
opener = "0.7.2"
k256 = { version = "0.13.4", features = ["ecdsa"] }
parking_lot = "0.12.3"
pkcs8 = "0.10.2"
tabled = "0.17.0"
proptest = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", default-features = false }
revm = { version = "19.0.0", default-features = false, features = ["optimism"] }
risc0-build = "1.2.0"
risc0-build-ethereum = "1.2.0"
risc0-zkp = { version = "1.2.0", default-features = false }
risc0-zkvm = "1.2.0"
rlp = "0.6.1"
rsa = "0.9.7"
semver = "1.0.24"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.9.0", default-features = false }
static_assertions = "1.1.0"
strum = "0.26.3"
tar = "0.4.42"
tempfile = "3.13.0"
thousands = "0.2.0"
maplit = "1.0.2"
test-log = "0.2.16"
thiserror = "1.0.65"
insta = "1.41.1"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.7" }
tokio = { version = "1.41.0", default-features = false, features = ["rt-multi-thread"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = "0.6.2"
tower-request-id = "0.3.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], default-features = false }
quick-junit = "0.5.0"
url = { version = "2.5", default-features = false }
urlpattern = "0.3.0"
vergen-gitcl = { version = "1.0.1", default-features = false }
yansi = "1.0.1"

block_header = { path = "block_header" }
block_trie = { path = "services/chain/block_trie" }
seal = { path = "services/call/seal" }
call_precompiles = { path = "services/call/precompiles" }
call_engine = { path = "services/call/engine" }
call_guest = { path = "services/call/guest" }
call_guest_wrapper = { path = "services/call/guest_wrapper" }
call_host = { path = "services/call/host" }
call_server = { path = "services/call/server" }
chain = { path = "chain" }
chain_client = { path = "services/chain/client" }
chain_db = { path = "services/chain/db" }
chain_guest = { path = "services/chain/guest" }
chain_guest_wrapper = { path = "services/chain/guest_wrapper" }
chain_host = { path = "services/chain/host" }
chain_server = { path = "services/chain/server" }
chain_server_lib = { path = "services/chain/server_lib" }
mock_chain_server = { path = "services/chain/mock_server" }
chain_common = { path = "services/chain/common" }
chain_test_utils = { path = "services/chain/test_utils" }
chain_worker = { path = "services/chain/worker" }
common = { path = "common" }
email_proof = { path = "email_proof" }
host_utils = { path = "host_utils" }
key_value = { path = "key_value" }
mpt = { path = "mpt" }
provider = { path = "provider" }
u64_range = { path = "range" }
server_utils = { path = "server_utils" }
test_runner = { path = "test_runner" }
web_proof = { path = "web_proof" }
zkvm-benchmarks = { path = "zkvm-benchmarks/benchmarks" }

[workspace.lints.clippy]
as_ptr_cast_mut = "warn"
assigning_clones = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
iter_filter_is_some = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
struct_field_names = "warn"
trivially_copy_pass_by_ref = "warn"
type_repetition_in_bounds = "warn"
unchecked_duration_subtraction = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
missing_const_for_fn = "warn"
zero_sized_map_values = "warn"

[profile.dev.package] # https://insta.rs/docs/quickstart/#optional-faster-runs
insta = { opt-level = 3 }
similar = { opt-level = 3 }
