[package]
name = "block_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
server_utils = { path = "../server_utils" }
tokio = { workspace = true }
tower = { workspace = true }
