[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true, features = ["rlp", "serde"] }
anyhow = { workspace = true }
derive-new = { workspace = true }
lazy_static = { workspace = true }
revm = { workspace = true, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
