[[bin]]
name = "vlayer"
path = "src/main.rs"

[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string"] }
colored = { workspace = true }
flate2 = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
test_runner = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
version = { workspace = true }

[lints]
workspace = true
