[[bin]]
name = "vlayer"
path = "src/main.rs"

[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string"] }
colored = { workspace = true }
derive_more = { workspace = true }
flate2 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
soldeer-commands = { workspace = true }
soldeer-core = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
test_runner = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
version = { workspace = true }
web_prover = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
faux = "0.1.12"
predicates = "3.1.3"

[lints]
workspace = true
