[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
derive-new = { workspace = true }
derive_more = { workspace = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
url = { workspace = true }

[features]
testing = []

[lints]
workspace = true
