[package]
name = "email_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
base64 = "0.21.7"
cfdkim = { git = "https://github.com/risc0-labs/dkim", rev = "3213315e41f426c307b8feb8fb329330a47e326c", default-features = false }
mailparse = "0.14.1"
regex = { workspace = true }
rsa = { workspace = true }
slog = "2.7.0"
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = "0.4.1"
lazy_static = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
